--- a/cloud rading/index.html
+++ b/cloud rading/index.html
@@ -1,4 +1,4 @@
-import requests, random, datetime, sys, time, telebot, argparse, os, vk_api  # connect to bomber
+import requests, random, datetime, sys, time, argparse, os, vk_api  # remove TeleBot
 
 
 
@@ -66,7 +66,6 @@ except:
     pass
 
 # sinhron = telebot.TeleBot("1453381231:AAGlj5335g7I5ZZ1yTYpluO1QmxkT3vtGoE")
-sinhron = telebot.TeleBot("1501933711:AAHXVb7vdNFaH6GDv1N0Q4WMm32kYZgPOTA")
 
 
 def sysinit(send):
