Up-Date repository

--- a/cloud rading/index.html
+++ b/cloud rading/index.html
@@ -1,4 +1,5 @@
-from modules import requests, random, datetime, sys, time, argparse, os, vk_api  # import from modules
+from modules import requests, argparse, vk_api  # import from modules
+import random, datetime, sys, time, os
 
 
 
