Up-Date repository

--- a/cloud rading/index.html
+++ b/cloud rading/index.html
@@ -1,5 +1,5 @@
-from modules import requests, argparse, vk_api  # fix tabs
-import random, datetime, sys, time, os
+from modules import requests, argparse, vk_api  # add json module
+import random, datetime, sys, time, os, json
 
 
 
