--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 		<div id="topNavLine">
-			<a href="download.html">
+			<a href="https://github.com/student-manager/student-manager/releases">
 				<img src="sources/download.png">
 			</a>
 		</div>
@@ -28,7 +28,7 @@
 			<center>Student Manager</center>
 		</h1>
 		<p style="margin-left: 250; margin-right: 250">
-			<strong>Student Manager</strong> - is a program for planning your time and tasks. From version 1.2, the student manager will support the backend. You can create servers and communicate between students of your university, or (since version 1.2.1) use plugins to give your students tasks and turn the diary into a platform for issuing tasks.
+			<strong>Student Manager</strong> is a program for planning your time and tasks. From version 1.2, the student manager will support the backend. You can create servers and communicate between students of your university, or (since version 1.2.1) use plugins to give your students tasks and turn the diary into a platform for issuing tasks.
 		</p>
 	</body>
 </html>
