Up-Date repository

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 			<a href="https://github.com/student-manager/student-manager/releases">
 				<img src="sources/download.png">
 			</a>
+			<a href="https://github.com/student-manager/student-manager/releases">
+				<img src="sources/tools.png">
+			</a>
 		</div>
 		<h1>
 			<center>Student Manager</center>
